# contacts-daemon

./: Cargo.toml  README.md
src/: main.rs
src/backend/: mod.rs  naive.rs  polars.rs  vcard.rs
